--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/TextView"
+        android:id="@+id/ResultText"
         android:layout_width="200dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,18 +17,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Button2"
+        android:id="@+id/GDPButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="GDPButton"
         android:text="Muunna punniksi (£)"
-        app:layout_constraintBottom_toTopOf="@+id/TextView"
+        app:layout_constraintBottom_toTopOf="@+id/ResultText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button1" />
+        app:layout_constraintTop_toBottomOf="@+id/USDButton" />
 
     <Button
-        android:id="@+id/Button1"
+        android:id="@+id/USDButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -36,16 +36,16 @@
         android:text="Muunna dollareiksi ($)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditText" />
+        app:layout_constraintTop_toBottomOf="@+id/EuroInput" />
 
     <EditText
-        android:id="@+id/EditText"
+        android:id="@+id/EuroInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Anna eurojen määrä..."
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/TextView"
+        app:layout_constraintBottom_toTopOf="@+id/ResultText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
